# pyPayNowSg

./: README.md  paynow.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflow/: test.yml
.github/workflows/: release.yml  test.yml
src/pyPayNowSg/: EMVCoHeaders.py  EMVCoSerializer.py  PayNowConfigFactory.py  PayNowHeaders.py  PayNowSerializer.py  __init__.py  pyPayNowSg.py
tests/: test.py  test_payload.py
