# [metadata]
# name = pyPayNowSg-daffodilistic
# version = 0.8.0
# author = Soh Thiam Hing
# author_email = daffodilistic@gmail.com
# description = A python package to generate PayNow QR code payloads.
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/daffodilistic/pyPayNowSg
# project_urls =
#     Bug Tracker = https://github.com/daffodilistic/pyPayNowSg/issues
# classifiers =
#     Programming Language :: Python :: 3
#     Programming Language :: Python :: 2.7
#     License :: OSI Approved :: Open Software License 3.0 (OSL-3.0)
#     Operating System :: OS Independent

# [options]
# package_dir =
#     = src
# packages = find:
# python_requires = >=2.7

# [options.packages.find]
# where = src

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=1